Co-authored-by: Tdkenn <Tdkenn@users.noreply.github.com>

--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+      <div id="blacklist" class="header">
+        <h2>Blacklist</h2>
+        <input type="text" id="blInput" placeholder="Name">
+        <span class="addBtn">Add</span>
+      </div>
+      
+      <ul id="blacklist">
+        <li>Themistokles Chronis</li>
+        <li>Jerry Stelmaszak</li>
+      </ul>
     <script src="popup.js"></script>
-    <div>
-      <p>Hello World!</p>
-    </div>
   </body>
 </html>
