Co-authored-by: Tdkenn <Tdkenn@users.noreply.github.com>

--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -4,16 +4,12 @@
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-      <div id="blacklist" class="header">
+      <div id="blHead" class="header">
         <h2>Blacklist</h2>
         <input type="text" id="blInput" placeholder="Name">
-        <span class="addBtn">Add</span>
+        <span class="addBtn" id="addBtn">Add</span>
       </div>
-      
-      <ul id="blacklist">
-        <li>Themistokles Chronis</li>
-        <li>Jerry Stelmaszak</li>
-      </ul>
+      <ul id="blacklist"></ul>
     <script src="popup.js"></script>
   </body>
 </html>
