--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -6,8 +6,13 @@
   <body>
       <div id="blHead" class="header">
         <h2>Blacklist</h2>
-        <input type="text" id="blInput" placeholder="Name">
-        <span class="addBtn" id="addBtn">Add</span>
+        <h2>Whitelist</h2>
+        <form>
+          <input type="text" id="blInput" placeholder="Name">
+          <span class="addBtn" id="addBtn">
+            <img src="plus-3107.png">
+          </span>  
+        </form>
       </div>
       <ul id="blacklist"></ul>
     <script src="popup.js"></script>
