--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -6,8 +6,12 @@
   <body>
       <div id="head" class="header">
         <div class="tabs">
-          <button class="tab active" id="blTab">Blacklist</button>
-          <button class="tab" id="wlTab">Whitelist</button>
+          <button class="tab active" id="blTab">
+            <img src="images/dislike.svg">
+          </button>
+          <button class="tab" id="wlTab">
+            <img src="images/like.svg">
+          </button>
         </div>
         <form>
           <input type="text" id="input" placeholder="Name">
