Menu switching, style changes

--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -21,7 +21,7 @@
         </form>
       </div>
       <ul id="blacklist"></ul>
-      <ul id="whitelist"></ul>
+      <ul id="whitelist" class="hidden"></ul>
     <script src="popup.js"></script>
   </body>
 </html>
